Move position to the agent
It is not a property owned by the locomotion. It is not part of the agent so that it can be
accessible more easily
Remove target walk and target vision since their work is done in the mood anyway
Create an overload for Locomotion.move to fit both cases used instead of passing null to one
Fixed transposed rendering of the world